[package]
name = "perma-planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = "0.13.2"
bevy_svg = "0.12.0"
geo = { version = "0.28" }
geojson = { version = "0.24" }
geozero = "0.13"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
eyre = "0.6"
